--- a/src/app/components/settings/settings.page.html
+++ b/src/app/components/settings/settings.page.html
@@ -2,3 +2,118 @@
 <div class="container-fluid section-header">
   Einstellung
 </div>
+
+<div class="container-fluid">
+   <div class="row">
+
+     <div class="col-lg-6" style="margin-top: 20px">
+       <div class="card">
+         <div class="card-header d-flex align-items-center">
+           <div class="icon-filed">
+             <fa-icon class="p-1" [icon]="['fas','calculator']"></fa-icon>
+             <span> Rechner </span>
+           </div>
+         </div>
+         <div class="card-body">
+           <div class="container-fluid">
+             <ul class="list-group list-group-flush">
+               <li class="list-group-item">Cras justo odio</li>
+               <li class="list-group-item">Dapibus ac facilisis in</li>
+               <li class="list-group-item">Morbi leo risus</li>
+             </ul>
+           </div>
+         </div>
+       </div>
+     </div>
+
+     <div class="col-lg-6" style="margin-top: 20px">
+       <div class="card">
+         <div class="card-header d-flex align-items-center">
+           <div class="icon-filed">
+             <fa-icon class="p-1" [icon]="['fas','sliders-h']"></fa-icon>
+             <span> Anwendung </span>
+           </div>
+         </div>
+         <div class="card-body">
+           <div class="container-fluid">
+
+           </div>
+         </div>
+       </div>
+     </div>
+
+     <div class="col-12" style="margin-top: 20px;">
+       <div class="card">
+         <div class="card-header d-flex align-items-center">
+           <div class="icon-filed">
+             <fa-icon class="p-1" [icon]="['fas','user-secret']"></fa-icon>
+             <span> DSGVO </span>
+           </div>
+         </div>
+         <div class="card-body overflow-auto" style="height: 300px">
+           <ul class="list-group list-group-flush">
+             <li class="list-group-item">
+               <h4>Allgemein</h4>
+               <p>Personenbezogene Daten (nachfolgend zumeist nur „Daten“ genannt) werden von uns nur im Rahmen der Erforderlichkeit sowie zum Zwecke der Bereitstellung eines funktionsfähigen und nutzerfreundlichen Internetauftritts, inklusive seiner Inhalte und der dort angebotenen Leistungen, verarbeitet.</p>
+               <p>Gemäß Art. 4 Ziffer 1. der Verordnung (EU) 2016/679, also der Datenschutz-Grundverordnung (nachfolgend nur „DSGVO“ genannt), gilt als „Verarbeitung“ jeder mit oder ohne Hilfe automatisierter Verfahren ausgeführter Vorgang oder jede solche Vorgangsreihe im Zusammenhang mit personenbezogenen Daten, wie das Erheben, das Erfassen, die Organisation, das Ordnen, die Speicherung, die Anpassung oder Veränderung, das Auslesen, das Abfragen, die Verwendung, die Offenlegung durch Übermittlung, Verbreitung oder eine andere Form der Bereitstellung, den Abgleich oder die Verknüpfung, die Einschränkung, das Löschen oder die Vernichtung.</p>
+             </li>
+             <li class="list-group-item">
+               <h4>FontAwesome</h4>
+               <p>Um Schriften und visuelle Elemente unseres Internetauftritts darstellen zu können, setzen wir die externen Schriftarten von FontAwesome ein. Bei FontAwesome handelt es sich um einen Dienst der</p>
+               <p>Fonticons Inc., 6 Porter Road, Apartment 3R, Cambridge, MA 02140, USA, nachfolgend nur „FontAwesome“ genannt.</p>
+               <p>Bei dem Aufruf unseres Internetauftritts wird eine Verbindung zum Server von FontAwesome in den USA aufgebaut, um so die Darstellung von Schriften und visuellen Elemente zu ermöglichen und zu aktualisieren.</p>
+               <p>Rechtsgrundlage ist Art. 6 Abs. 1 lit. f) DSGVO. Unser berechtigtes Interesse liegt in der Optimierung und dem wirtschaftlichen Betrieb unseres Internetauftritts.</p>
+               <p>Durch die bei Aufruf unseres Internetauftritts hergestellte Verbindung zum Server von FontAwesome kann FontAwesome ermitteln, von welcher Website Ihre Anfrage gesendet worden ist und an welche IP-Adresse die Darstellung der Schrift zu übermitteln ist.</p>
+               <p>FontAwesome bietet unter</p>
+               <p><a href="https://fontawesome.com/privacy" target="_blank" rel="noopener">https://fontawesome.com/privacy</a></p>
+               <p>weitere Informationen an und zwar insbesondere zu den Möglichkeiten der Unterbindung der Datennutzung.</p>
+
+             </li>
+             <li class="list-group-item">
+               <h4>BootstrapCDN</h4>
+               <p>Zur Optimierung der Abrufgeschwindigkeit, der Gestaltung und Darstellung der Inhalte unseres Internetauftritts auf unterschiedlichen Endgeräten setzen wir in unserem Internetauftritt den Dienst BootstrapCDN, ein Content Delivery Network („CDN“), ein. Hierbei handelt es sich um einen Dienst der StackPath, LLC, 2021 McKinney Ave. Suite 1100, Dallas, TX 75201, USA, nachfolgend nur „BootstrapCDN“ genannt.</p>
+               <p>Um die Inhalte unseres Internetauftritts schnell ausliefern zu können, greift der Dienst auf sog. JavaScript-Bibliotheken zurück. Dabei werden entsprechende Dateien von einem Server von BootstrapCDN geladen, der Ihre IP-Adresse erfasst.</p>
+               <p>Zudem bietet BootstrapCDN unter</p>
+               <p><a href="https://www.stackpath.com/legal/master-service-agreement/#privacy" target="_blank" rel="noopener">https://www.stackpath.com/legal/master-service-agreement/#privacy</a> &nbsp;&nbsp;</p>
+               <p>weitergehende Datenschutzinformationen an.</p>
+               <p>Rechtsgrundlage ist Art. 6 Abs. 1 lit. f) DSGVO. Unser berechtigtes Interesse liegt in der Beschleunigung der Ladezeiten unseres Internetauftritts sowie in dessen Optimierung.</p>
+               <p>Um die Ausführung des Java-Script-Codes von BootstrapCDN insgesamt zu verhindern, können Sie einen sog. Java-Script-Blocker installieren, wie bspw. noscript.net oder ghostery.com. Sollten Sie die Ausführung des Java-Script-Codes verhindern oder einschränken, kann dies aus technischen Gründen allerdings dazu führen, dass womöglich nicht sämtliche Inhalte und Funktionen unseres Internetauftritts verfügbar sind.</p>
+             </li>
+           </ul>
+           </div>
+       </div>
+     </div>
+     <div class="col-12" style="margin-top: 20px">
+       <div class="card">
+         <div class="card-header d-flex align-items-center">
+           <div class="icon-filed">
+             <fa-icon class="p-1" [icon]="['fas','info']"></fa-icon>
+             <span> Information </span>
+           </div>
+         </div>
+         <div class="card-body">
+           <div class="container-fluid">
+             <div class="row">
+               <div class="col-lg-3">
+                 <label>Version</label>
+                 <input disabled type="text" class="form-control" value="1.0.0">
+               </div>
+               <div class="col-lg-3">
+                 <label>Entwickler & Copyright</label>
+                 <input disabled type="text" class="form-control" value="Michael Reder">
+               </div>
+               <div class="col-lg-3">
+                 <label>E-Mail</label>
+                 <input disabled type="text" class="form-control" value="reder949@gmail.com">
+               </div>
+               <div class="col-lg-3">
+                 <label>Auftraggeber</label>
+                 <input disabled type="text" class="form-control" value="Reder Systems GmbH">
+               </div>
+             </div>
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
+</div>
