--- a/src/app/components/settings/settings.page.html
+++ b/src/app/components/settings/settings.page.html
@@ -17,9 +17,18 @@
          <div class="card-body">
            <div class="container-fluid">
              <ul class="list-group list-group-flush">
-               <li class="list-group-item">Cras justo odio</li>
-               <li class="list-group-item">Dapibus ac facilisis in</li>
-               <li class="list-group-item">Morbi leo risus</li>
+              <li class="list-group-item">
+                <input class="form-check-input" type="checkbox" checked disabled>
+                <span>
+                  Sofortige Berechnung der Elementen
+                </span>
+              </li>
+              <li class="list-group-item">
+                <input class="form-check-input" type="checkbox"  disabled>
+                <span>
+                  Ändern des Volumenstrom
+                </span>
+              </li>
              </ul>
            </div>
          </div>
@@ -36,7 +45,20 @@
          </div>
          <div class="card-body">
            <div class="container-fluid">
-
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <input class="form-check-input" type="checkbox" checked disabled>
+                <span>
+                  Speichern in Localstorage
+                </span>
+              </li>
+              <li class="list-group-item">
+                <input class="form-check-input" type="checkbox"  disabled>
+                <span>
+                  Untersützung von mehreren Sprachen
+                </span>
+              </li>
+            </ul>
            </div>
          </div>
        </div>
@@ -83,7 +105,7 @@
            </div>
        </div>
      </div>
-     <div class="col-12" style="margin-top: 20px">
+     <div class="col-12" style="margin-top: 20px; margin-bottom: 50px;">
        <div class="card">
          <div class="card-header d-flex align-items-center">
            <div class="icon-filed">
